HW16-MessageServer. Fixes after comments in PR