@@ -3,6 +3,11 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <!--  <parent>-->
+  <!--    <artifactId>otus-java</artifactId>-->
+  <!--    <groupId>com.danzki</groupId>-->
+  <!--    <version>${revision}</version>-->
+  <!--  </parent>-->
 
   <artifactId>hw16-frontend</artifactId>
 
@@ -18,9 +23,8 @@
 
   <properties>
     <exec.mainClass>com.danzki.FrontendApplication</exec.mainClass>
-    <maven.compiler.source>11</maven.compiler.source>
-    <maven.compiler.target>11</maven.compiler.target>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>13</maven.compiler.source>
+    <maven.compiler.target>13</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <spring.version>5.2.5.RELEASE</spring.version>
     <spring-boot.version>2.2.6.RELEASE</spring-boot.version>
@@ -28,6 +32,7 @@
     <logback.version>1.2.3</logback.version>
     <bootstrap.version>4.4.1-1</bootstrap.version>
     <thymeleaf.version>3.0.11.RELEASE</thymeleaf.version>
+    <libs.path>/users/mainuser/Development/jOtus/libs</libs.path>
   </properties>
 
   <dependencies>
@@ -117,6 +122,16 @@
       <version>${bootstrap.version}</version>
     </dependency>
     <!--end region-->
+
+    <!--custom dependencies-->
+    <dependency>
+      <groupId>com.danzki</groupId>
+      <artifactId>hw16-messageClient</artifactId>
+      <version>2019-12-SNAPSHOT</version>
+      <scope>system</scope>
+      <systemPath>${libs.path}/messageClient-2019-12-SNAPSHOT.jar</systemPath>
+    </dependency>
+    <!--endregion-->
   </dependencies>
 
   <build>
@@ -125,13 +140,37 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+        <version>${spring-boot.version}</version>
+        <configuration>
+          <mainClass>${exec.mainClass}</mainClass>
+          <includeSystemScope>true</includeSystemScope>
+          <jvmArguments>--enable-preview</jvmArguments>
+        </configuration>
         <executions>
           <execution>
-            <configuration>
-              <mainClass>${exec.mainClass}</mainClass>
-            </configuration>
+            <!-- Useful info on /actuator/info -->
+            <id>build-info</id>
+            <goals>
+              <goal>build-info</goal>
+            </goals>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.22.2</version>
+        <configuration>
+          <argLine>--enable-preview</argLine>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+        <configuration>
+          <compilerArgs>--enable-preview</compilerArgs>
+        </configuration>
       </plugin>
     </plugins>
   </build>
